--- a/juego.html
+++ b/juego.html
@@ -93,24 +93,40 @@
       <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
     </div>
     <script>
+      const btnEmpezar = document.getElementById('btnEmpezar')
       const celeste = document.getElementById('celeste')
       const violeta = document.getElementById('violeta')
       const naranja = document.getElementById('naranja')
       const verde = document.getElementById('verde')
-      const btnEmpezar = document.getElementById('btnEmpezar')
 
       class Juego {
         constructor() {
           this.inicializar()
+          this.generarSecuencia()
         }
 
         inicializar() {
           btnEmpezar.classList.add('hide')
+          this.nivel = 1
+          this.colores ={//si nuestros atributos tienen el mismo nombre que la variable que vamos asignar podemos aserlo de la siguiente manera
+            celeste,
+            violeta,
+            naranja,
+            verde
+          }
+        }
+
+        generarSecuencia(){
+            //JS crea por nosotros el atributo si no lo definimos antes
+            //asi como en la linea de abajo
+            this.secuencia = new Array( 10 ).fill( 0 )
+            .map( n => Math.floor( Math.random() * 4) )
         }
       }
 
+
       function empezarJuego() {
-        var juego = new Juego()
+        window.juego = new Juego()
       }
     </script>
   </body>
